--- a/xrootd/templates/stagein.sh.erb
+++ b/xrootd/templates/stagein.sh.erb
@@ -4,7 +4,7 @@
 #  Note this script expects 2 input parameters
 #
 #  1 - xrootd source file name
-#  2 - xrootd dets file name
+#  2 - xrootd dest file name
 #  3 - xrootd cluster ID
 
 log()
