--- a/condor/templates/condor_config.local.node.erb
+++ b/condor/templates/condor_config.local.node.erb
@@ -1,4 +1,4 @@
-# Worker node setup
+### Worker node setup
 CONDOR_HOST = <%= @head %>
 COLLECTOR_NAME = Condor Node at $(FULL_HOSTNAME)
 
@@ -12,22 +12,30 @@ CLAIM_WORKLIFE = 3600
 DAEMON_LIST = MASTER, STARTD, SHARED_PORT
 UID_DOMAIN = <%= @domain %>
 
-# Networking (Use shared port)
+### Networking
+# If @collectors is defined, we use multiple collectors and need to randomize
+# the collector port number
+<% if @collectors -%>
+COLLECTOR_HOST=$(CONDOR_HOST):<%= 29660 + 1 + rand(@collectors) %>
+<% else -%>
 COLLECTOR_HOST=$(CONDOR_HOST):29660
+<% end %>
+HIGHPORT = 30000
+LOWPORT = 20000
+USE_SHARED_PORT = TRUE
 UPDATE_COLLECTOR_WITH_TCP = True
 UPDATE_INTERVAL = 30
 CCB_ADDRESS = $(COLLECTOR_HOST)
 PRIVATE_NETWORK_NAME = <%= @domain %>
-HIGHPORT = 30000
-LOWPORT = 20000
-USE_SHARED_PORT = TRUE
-DAEMON_LIST =  $(DAEMON_LIST) SHARED_PORT
+
+# TODO: Is this necessary?
+#DAEMON_LIST =  $(DAEMON_LIST) SHARED_PORT
 
 
-# Security
-# Use password security.
-
+### Security
 ALLOW_WRITE = condor_pool@*
+# Collector has this. Are they equivalent?
+#ALLOW_WRITE = condor_pool@*/*
 SEC_DEFAULT_AUTHENTICATION = REQUIRED
 SEC_DEFAULT_AUTHENTICATION_METHODS = PASSWORD, FS
 SEC_PASSWORD_FILE = <%= @password_file %>
@@ -37,8 +45,7 @@ SEC_ENABLE_MATCH_PASSWORD_AUTHENTICATION = True
 ALLOW_WRITE = $(ALLOW_WRITE), submit-side@matchsession/*
 ALLOW_ADMINISTRATOR = condor_pool@*/*
 
-
-# Job environment config
+### Job environment config
 NUM_SLOTS = <%= @slots %>
 USER_JOB_WRAPPER = <%= @job_wrapper %>
 <% @slots.each do |slot| -%>
@@ -48,10 +55,14 @@ SLOT<%= slot %>_USER = slot<%= slot %>
 DEDICATED_EXECUTE_ACCOUNT_REGEXP = slot[1-<%= @slots %>]+
 EXECUTE = <%= @homedir %>/execute
 
-#NodeType = "atlas"
+### Node type (when using mixed node type clusters)
+<% if @node_type -%>
 NodeType = <%= @node_type %>
 STARTD_ATTRS = $(STARTD_ATTRS) NodeType
+<% end -%>
 
-# Debug settings
-#ALL_DEBUG = D_FULLDEBUG, D_COMMAND, D_SECURITY, D_NETWORK
-#STARTD_DEBUG = D_PID D_COMMAND D_JOB D_MACHINE
+<% if @debug -%>
+### Debug settings
+ALL_DEBUG = D_FULLDEBUG, D_COMMAND, D_SECURITY, D_NETWORK
+STARTD_DEBUG = D_PID D_COMMAND D_JOB D_MACHINE
+<% end -%>
