--- a/condor/templates/condor_config.local.node.erb
+++ b/condor/templates/condor_config.local.node.erb
@@ -46,8 +46,8 @@ ALLOW_ADMINISTRATOR = condor_pool@*/*
 ### Job environment config
 USER_JOB_WRAPPER = <%= @job_wrapper %>
 NUM_SLOTS = <%= @slots %>
-<% @slots.each do |slot| -%>
-SLOT<%= slot %>_USER = slot<%= slot %>
+<% (1..@slots.to_i).each do |slot| -%>
+SLOT<%= slot %>_USER = slot<%= "%02d" % slot %>
 <% end -%>
 DEDICATED_EXECUTE_ACCOUNT_REGEXP = slot[0-9]+
 EXECUTE = <%= @homedir %>/execute
