--- a/gce_node/templates/grid-setup.sh.erb
+++ b/gce_node/templates/grid-setup.sh.erb
@@ -3,7 +3,7 @@ if [[ ! "$USER" =~ ^slot[0-9]+$ ]] ; then
   return 0
 fi
 
-export GLOBUS_FTP_CLIENT_GRIDFTP2=true
+#export GLOBUS_FTP_CLIENT_GRIDFTP2=true
 
 # Workaround for condor not setting $HOME for worker sessions.
 # voms-proxy-info requires this.
@@ -25,9 +25,12 @@ export ALRB_useGridSW=gLite
 <% end -%>
 
 ## Fix for using AtlasLocalRootBase with a kit
-unset  AtlasSetupSite
+#unset  AtlasSetupSite
+#
 rm ~/.asetup
 
-# Site-specific variables (e.g. Frontier and Squid servers) are set based on ATLAS_SITE_NAME (from JDL).
-# This auto-setup is only temporarily needed, and will soon become automatic
+# Site-specific variables (e.g. Frontier and Squid servers) are set based on
+# ATLAS_SITE_NAME. This auto-setup is only temporarily needed,
+# and will soon become automatic (I wonder when and how I will know?)
+export ATLAS_SITE_NAME=<%= @atlas_site %>
 . /cvmfs/atlas.cern.ch/repo/sw/local/bin/auto-setup
