--- a/apf/templates/queues.conf.erb
+++ b/apf/templates/queues.conf.erb
@@ -985,10 +985,13 @@ nickname = <%= @panda_queue %>
 batchsubmit.condorlocal.condor_attributes = periodic_remove = (JobStatus == 5 && (CurrentTime - EnteredCurrentStatus) > 3600) || (JobStatus == 1 && globusstatus =!= 1 && (CurrentTime - EnteredCurrentStatus) > 86400)
 batchsubmit.condorlocal.proxy = atlas-private
 
-schedplugin = Ready, MinPerCycle, MaxPerCycle, MaxPending
-sched.minpercycle.minimum = 10
-sched.maxpercycle.maximum = 20
-sched.maxpending.maximum = 50
+#schedplugin = Ready, MinPerCycle, MaxPerCycle, MaxPending
+#sched.minpercycle.minimum = 10
+#sched.maxpercycle.maximum = 20
+#sched.maxpending.maximum = 50
+
+schedplugin = Ready, Fixed
+sched.fixed.pilotspercycle = 4
 
 # These arguments are passed through to the payload job (e.g., the Panda pilot).
 executable.arguments = %(executable.defaultarguments)s --script=pilot.py --libcode=pilotcode.tar.gz,pilotcode-rc.tar.gz --pilotsrcurl=http://panda.cern.ch:25880/cache --user self
