Added debug option to cvmfs module.

--- a/cvmfs/templates/default.local.erb
+++ b/cvmfs/templates/default.local.erb
@@ -11,4 +11,6 @@ CVMFS_HTTP_PROXY="<%= @squidproxy %>;DIRECT"
 CVMFS_HTTP_PROXY=DIRECT
 <% end -%>
 CVMFS_CACHE_BASE=<%= @cachedir %>
+<% if @debug -%>
 CVMFS_DEBUGLOG=<%= @logdir %>/cvmfs.log
+<% end -%>
