Renamed trace option to debug, for consistency.

--- a/xrootd/templates/xrootd.cfg.erb
+++ b/xrootd/templates/xrootd.cfg.erb
@@ -37,7 +37,7 @@ frm.xfr.copycmd in stats noalloc <%= @stagein %> $SRC $DST $CID
 all.adminpath <%= @homedir %>
 all.pidpath <%= @rundir %>
 
-<% if @trace -%>
+<% if @debug -%>
 ofs.trace all
 xrd.trace all
 cms.trace all
