fixed job wrapper script placement in templates

--- a/condor/templates/condor_config.local.csnode.erb
+++ b/condor/templates/condor_config.local.csnode.erb
@@ -36,7 +36,7 @@ MaxJobRetirementTime = 3600 * 24 * 2
 SHUTDOWN_GRACEFUL_TIMEOUT = 3600 * 25 * 2
 
 ### Job environment config
-USER_JOB_WRAPPER = <%= @job_wrapper %>
+USER_JOB_WRAPPER = <%= @_job_wrapper %>
 NUM_SLOTS = <%= @slots %>
 <% (1..@slots.to_i).each do |slot| -%>
 SLOT<%= slot %>_USER = slot<%= "%02d" % slot %>
