--- a/condor/templates/condor_config.local.csnode.erb
+++ b/condor/templates/condor_config.local.csnode.erb
@@ -1,7 +1,7 @@
 # Local config for Cloud Scheduler
 
 ## Set this to the name you would like to give your VM
-VMType = "GCE"
+VMType = "cernvm"
 
 ##  What machine is your central manager? - will be contextualized by Cloud Scheduler
 CONDOR_HOST=your.central.manager
