fix for condor behaviour

--- a/gce_node/templates/grid-setup.sh.erb
+++ b/gce_node/templates/grid-setup.sh.erb
@@ -5,12 +5,6 @@ fi
 
 export GLOBUS_FTP_CLIENT_GRIDFTP2=true
 
-# Workaround for condor not setting $HOME for worker sessions.
-# voms-proxy-info requires this.
-if [[ -z "$HOME" ]] ; then
-  export HOME=`eval echo ~$USER`
-fi
-
 ## Set up grid environment:
 export ATLAS_LOCAL_ROOT_BASE=/cvmfs/atlas.cern.ch/repo/ATLASLocalRootBase
 source $ATLAS_LOCAL_ROOT_BASE/user/atlasLocalSetup.sh --quiet
@@ -33,3 +27,6 @@ rm ~/.asetup
 # ATLAS_SITE_NAME. This auto-setup is only temporarily needed,
 # and will soon become automatic (I wonder when and how I will know?)
 . /cvmfs/atlas.cern.ch/repo/sw/local/bin/auto-setup
+
+## fix for atlas software location disappearing from condor job environment
+export VO_ATLAS_SW_DIR
