--- a/condor/templates/condor_config.local.csnode.erb
+++ b/condor/templates/condor_config.local.csnode.erb
@@ -4,7 +4,11 @@
 VMType = "<%= @vmtype %>"
 
 ##  What machine is your central manager? - will be contextualized by Cloud Scheduler
-CONDOR_HOST=your.central.manager
+<% if @central_manager -%>
+CONDOR_HOST=<%= @central_manager %>
+<% else -%>
+CONDOR_HOST=ars
+<% end -%>
 
 ## Execute spool directory. - Verify that these directory's exist - or change to desired location
 LOCK=/var/lock/condor
