--- a/condor/templates/condor.init.d.erb
+++ b/condor/templates/condor.init.d.erb
@@ -3,13 +3,13 @@
 ##
 ## Copyright (C) 1990-2009, Condor Team, Computer Sciences Department,
 ## University of Wisconsin-Madison, WI.
-## 
+##
 ## Licensed under the Apache License, Version 2.0 (the "License"); you
 ## may not use this file except in compliance with the License.  You may
 ## obtain a copy of the License at
-## 
+##
 ##    http://www.apache.org/licenses/LICENSE-2.0
-## 
+##
 ## Unless required by applicable law or agreed to in writing, software
 ## distributed under the License is distributed on an "AS IS" BASIS,
 ## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -23,13 +23,13 @@
 # chkconfig: 2345 98 10
 # description: Condor HTC computing platform
 #
-# condor script for SysV-style init boot scripts.  
+# condor script for SysV-style init boot scripts.
 #
 # Usually this would be installed as /etc/init.d/condor with soft
 # links put in from /etc/rc*.d to point back to /etc/init.d/condor to
 # determine when Condor should be started and stopped.  Exact
 # directories or details of the links you should use will vary from
-# platform to platform. 
+# platform to platform.
 #
 
 # This script strives for portability, and thus may be inelegant
@@ -65,7 +65,7 @@ START_REQUIREMENT=`cat /etc/condor/start_req_config 2>/dev/null`
 CONDOR_CONFIG=/etc/condor/condor_config
 
 # Path to condor_config_val
-CONDOR_CONFIG_VAL=/usr/bin/condor_config_val
+CONDOR_CONFIG_VAL=<%= @condor_config_val %>
 
 # Path to condor_config.local.modifications
 CONDOR_CONFIG_LOCAL_MODIFS=/etc/condor/condor_config.local.modifications
@@ -96,7 +96,7 @@ MAX_STOP_WAIT=30
 
 # The ps command to dump all running processes.  The PID should be
 # the second field in the output, and the full command name should
-# be present.  Likely options are "/bin/ps auwx" and "/bin/ps -ef".  
+# be present.  Likely options are "/bin/ps auwx" and "/bin/ps -ef".
 # If blank, this script will try to automatically detect it.
 PS=
 
@@ -186,7 +186,7 @@ get_condor_config_val() {
 	echo "$TMPVAL"
 }
 
-# Ensure CONDOR_SBIN holds path to SBIN as defined in the 
+# Ensure CONDOR_SBIN holds path to SBIN as defined in the
 # CONDOR_CONFIG file
 init_condor_sbin() {
 	if [ "$CONDOR_SBIN" != "" ]; then
@@ -411,13 +411,53 @@ setup_on_ec2() {
 				replace_or_append "PRIVATE_NETWORK_INTERFACE" "PRIVATE_NETWORK_INTERFACE=$private_network_interface" $local_file
 			fi
 		else
-			# Set hostname to instance id when we're using private net
-			EXTHOSTNAME=`curl -s http://$EC2_METADATA/latest/meta-data/instance-id`
+			# EXTHOSTNAME=`curl -s http://$EC2_METADATA/latest/meta-data/instance-id`
+			EXTHOSTNAME=`curl -s http://$EC2_METADATA/latest/meta-data/public-hostname`
 			VALID_ID=$?
 			if [ $VALID_ID -eq 0 ] && [[ $EXTHOSTNAME != ??xml* ]] && [[ $EXTHOSTNAME != ?html* ]] ; then
 				hostname $EXTHOSTNAME
 
 				private_network_interface=`curl -s http://$EC2_METADATA/latest/meta-data/local-ipv4`
+				replace_or_append "PRIVATE_NETWORK_INTERFACE" "PRIVATE_NETWORK_INTERFACE=$private_network_interface" $local_file
+			fi
+		fi
+	fi
+
+}
+
+setup_on_gce() {
+
+	local_file=`get_condor_config_val LOCAL_CONFIG_FILE`
+
+	public_ip=`curl -m 10 -s http://metadata/computeMetadata/v1beta1/instance/network-interfaces/0/access-configs/0/external-ip`
+	test $public_ip != "0.0.0.0" > /dev/null 2>&1
+	HAS_PUBLIC_IP=$?
+
+	curl -m 10 -s http://metadata/ >/dev/null 2>&1
+	IS_EC2=$?
+	if [ $IS_EC2 -eq 0 ] ; then
+
+		if [ $HAS_PUBLIC_IP -eq 0 ] ; then
+
+			# Set hostname to external
+			EXTHOSTNAME=`curl -s http://metadata/computeMetadata/v1beta1/instance/hostname`
+			VALID_HOST=$?
+			if [ $VALID_HOST -eq 0 ] && [[ $EXTHOSTNAME != ??xml* ]] && [[ $EXTHOSTNAME != ?html* ]] ; then
+				hostname $EXTHOSTNAME
+
+				tcp_forwarding_host=`curl -s http://metadata/computeMetadata/v1beta1/instance/network-interfaces/0/access-configs/0/external-ip`
+				replace_or_append "TCP_FORWARDING_HOST" "TCP_FORWARDING_HOST=$tcp_forwarding_host" $local_file
+
+				private_network_interface=`curl -s http://metadata/computeMetadata/v1beta1/instance/network-interfaces/0/ip`
+				replace_or_append "PRIVATE_NETWORK_INTERFACE" "PRIVATE_NETWORK_INTERFACE=$private_network_interface" $local_file
+			fi
+		else
+			EXTHOSTNAME=`curl -s http://metadata/computeMetadata/v1beta1/instance/hostname`
+			VALID_ID=$?
+			if [ $VALID_ID -eq 0 ] && [[ $EXTHOSTNAME != ??xml* ]] && [[ $EXTHOSTNAME != ?html* ]] ; then
+				hostname $EXTHOSTNAME
+
+				private_network_interface=`curl -s http://metadata/computeMetadata/v1beta1/instance/network-interfaces/0/ip`
 				replace_or_append "PRIVATE_NETWORK_INTERFACE" "PRIVATE_NETWORK_INTERFACE=$private_network_interface" $local_file
 			fi
 		fi
@@ -460,7 +500,11 @@ verify_execute () {
 # Start condor.
 start() {
         set_hostkey_permissions
-	setup_on_ec2
+<% if @cloud_type == "gce" -%>
+        setup_on_gce
+<% else -%>
+        setup_on_ec2
+<% end -%>
 	setup_ccb
 	set_central_manager $CENTRAL_MANAGER
         setup_vmtype $IMAGE_METADATA
@@ -553,7 +597,7 @@ reload() {
 #
 # Return codes (from Linux Standards Base)
 # (Not all of these are currently implemented)
-# 0 running 
+# 0 running
 # 1 dead and /var/run pid file exists
 # 2 dead and /var/lock lock file exists
 # 3 not running
@@ -565,13 +609,13 @@ status() {
 		return 0
 	else
 		echo "Condor is not running"
-		return 3; 
+		return 3;
 	fi
 }
 
 ################################################################################
 
-# Back up only relevant argument, as function calls may stomp it. 
+# Back up only relevant argument, as function calls may stomp it.
 INIT_COMMAND=$1
 
 verify_executable "$CONDOR_CONFIG_VAL"
