Fix condor configuration by options
Create run, spool, and log directories for the condor client. Reflect
configuration in condor config file template. Add option to set VMType
reported by condor client. Condor needs to be resarted after changes by
puppet.  Make CONDOR_CONFIG_VAL dependent on osfamily and set value
accordingly in the condor init script. Add condor startup functionality
to interact properly with GCE metadata.

Changes:
   * modified:   condor/manifests/client.pp
   * modified:   condor/manifests/init.pp
   * renamed:    condor/files/condor.init.d -> condor/templates/condor.erb
   * modified:   condor/templates/condor_config.local.csnode.erb
   * modified:   gce_node/manifests/init.pp

--- a/condor/templates/condor_config.local.csnode.erb
+++ b/condor/templates/condor_config.local.csnode.erb
@@ -1,7 +1,7 @@
 # Local config for Cloud Scheduler
 
 ## Set this to the name you would like to give your VM
-VMType = "GCE"
+VMType = "<%= @vmtype %>"
 
 ##  What machine is your central manager? - will be contextualized by Cloud Scheduler
 CONDOR_HOST=your.central.manager
@@ -10,6 +10,14 @@ SEC_DAEMON_AUTHENTICATION =
 SEC_DAEMON_AUTHENTICATION_METHODS =
 SEC_CLIENT_AUTHENTICATION_METHODS =
 SEC_PASSWORD_FILE =
+
+## Execute spool directory. - Verify that these directory's exist - or change to desired location
+EXECUTE=/var/condor/execute
+LOCK=/var/condor/lock
+LOG=<%= @logdir %>
+RUN=<%= @rundir %>
+SPOOL=<%= @spooldir %>
+
 
 ###### You should not need to make changes below here ########
 
