--- a/condor/templates/condor.erb
+++ b/condor/templates/condor.erb
@@ -65,7 +65,7 @@ START_REQUIREMENT=`cat /etc/condor/start_req_config 2>/dev/null`
 CONDOR_CONFIG=/etc/condor/condor_config
 
 # Path to condor_config_val
-CONDOR_CONFIG_VAL=/usr/bin/condor_config_val
+CONDOR_CONFIG_VAL=<%= @condor_config_val %>
 
 # Path to condor_config.local.modifications
 CONDOR_CONFIG_LOCAL_MODIFS=/etc/condor/condor_config.local.modifications
@@ -411,13 +411,53 @@ setup_on_ec2() {
 				replace_or_append "PRIVATE_NETWORK_INTERFACE" "PRIVATE_NETWORK_INTERFACE=$private_network_interface" $local_file
 			fi
 		else
-			# Set hostname to instance id when we're using private net
-			EXTHOSTNAME=`curl -s http://$EC2_METADATA/latest/meta-data/instance-id`
+			# EXTHOSTNAME=`curl -s http://$EC2_METADATA/latest/meta-data/instance-id`
+			EXTHOSTNAME=`curl -s http://$EC2_METADATA/latest/meta-data/public-hostname`
 			VALID_ID=$?
 			if [ $VALID_ID -eq 0 ] && [[ $EXTHOSTNAME != ??xml* ]] && [[ $EXTHOSTNAME != ?html* ]] ; then
 				hostname $EXTHOSTNAME
 
 				private_network_interface=`curl -s http://$EC2_METADATA/latest/meta-data/local-ipv4`
+				replace_or_append "PRIVATE_NETWORK_INTERFACE" "PRIVATE_NETWORK_INTERFACE=$private_network_interface" $local_file
+			fi
+		fi
+	fi
+
+}
+
+setup_on_gce() {
+
+	local_file=`get_condor_config_val LOCAL_CONFIG_FILE`
+
+	public_ip=`curl -m 10 -s http://metadata/computeMetadata/v1beta1/instance/network-interfaces/0/access-configs/0/external-ip`
+	test $public_ip != "0.0.0.0" > /dev/null 2>&1
+	HAS_PUBLIC_IP=$?
+
+	curl -m 10 -s http://metadata/ >/dev/null 2>&1
+	IS_EC2=$?
+	if [ $IS_EC2 -eq 0 ] ; then
+
+		if [ $HAS_PUBLIC_IP -eq 0 ] ; then
+
+			# Set hostname to external
+			EXTHOSTNAME=`curl -s http://metadata/computeMetadata/v1beta1/instance/hostname`
+			VALID_HOST=$?
+			if [ $VALID_HOST -eq 0 ] && [[ $EXTHOSTNAME != ??xml* ]] && [[ $EXTHOSTNAME != ?html* ]] ; then
+				hostname $EXTHOSTNAME
+
+				tcp_forwarding_host=`curl -s http://metadata/computeMetadata/v1beta1/instance/network-interfaces/0/access-configs/0/external-ip`
+				replace_or_append "TCP_FORWARDING_HOST" "TCP_FORWARDING_HOST=$tcp_forwarding_host" $local_file
+
+				private_network_interface=`curl -s http://metadata/computeMetadata/v1beta1/instance/network-interfaces/0/ip`
+				replace_or_append "PRIVATE_NETWORK_INTERFACE" "PRIVATE_NETWORK_INTERFACE=$private_network_interface" $local_file
+			fi
+		else
+			EXTHOSTNAME=`curl -s http://metadata/computeMetadata/v1beta1/instance/hostname`
+			VALID_ID=$?
+			if [ $VALID_ID -eq 0 ] && [[ $EXTHOSTNAME != ??xml* ]] && [[ $EXTHOSTNAME != ?html* ]] ; then
+				hostname $EXTHOSTNAME
+
+				private_network_interface=`curl -s http://metadata/computeMetadata/v1beta1/instance/network-interfaces/0/ip`
 				replace_or_append "PRIVATE_NETWORK_INTERFACE" "PRIVATE_NETWORK_INTERFACE=$private_network_interface" $local_file
 			fi
 		fi
@@ -460,7 +500,7 @@ verify_execute () {
 # Start condor.
 start() {
         set_hostkey_permissions
-	setup_on_ec2
+        <% if @cloud_type == "gce" %>setup_on_gce<% else %>setup_on_ec2<% end %>
 	setup_ccb
 	set_central_manager $CENTRAL_MANAGER
         setup_vmtype $IMAGE_METADATA
