Add java executable path to condor configuration
Add java executable path to condor configuration. Condor complains if it
can't find a java executable; CernVM doesn't add the path to the java
executable to $PATH.

Changes:
   * modified:   condor/manifests/client.pp
   * modified:   condor/templates/condor_config.local.csnode.erb
   * modified:   condor/templates/condor_config.local.node.erb

--- a/condor/templates/condor_config.local.csnode.erb
+++ b/condor/templates/condor_config.local.csnode.erb
@@ -18,6 +18,11 @@ LOG=<%= @logdir %>
 RUN=<%= @rundir %>
 SPOOL=<%= @spooldir %>
 
+## Point to the java executable.
+<% if @java_exec -%>
+JAVA = <%= @java_exec %>
+<% end -%>
+
 
 ###### You should not need to make changes below here ########
 
