Configure condor to join queue attached to cloud scheduler for csnodes
Add central_manager fact containing condor host connected to the
cloud scheduler that booted the VM.  Add grid secutrity directory to
contain certificates for condor.  TODO: retrieve certificates and
central_manager from metadata server and thus remove dependence on
context helper.

Changes:
   * new file:   condor/lib/facter/central_manager.rb
   * modified:   condor/templates/condor_config.local.csnode.erb
   * modified:   gce_node/manifests/grid_setup.pp

--- a/condor/templates/condor_config.local.csnode.erb
+++ b/condor/templates/condor_config.local.csnode.erb
@@ -3,8 +3,15 @@
 ## Set this to the name you would like to give your VM
 VMType = "<%= @vmtype %>"
 
-##  What machine is your central manager? - will be contextualized by Cloud Scheduler
-CONDOR_HOST=your.central.manager
+## Hostname of the central manager.
+# Prefer value contextualized by Cloud Scheduler and then use head
+<% if @central_manager -%>
+CONDOR_HOST=<%= @central_manager %>
+<% elsif @head -%>
+CONDOR_HOST=<%= @head %>
+<% else -%>
+CONDOR_HOST=UNCONFIGURED
+<% end -%>
 
 SEC_DAEMON_AUTHENTICATION =
 SEC_DAEMON_AUTHENTICATION_METHODS =
