Configure condor to join queue attached to cloud scheduler for csnodes
Add central_manager fact containing condor host connected to the
cloud scheduler that booted the VM.  Add grid secutrity directory to
contain certificates for condor.  TODO: retrieve certificates and
central_manager from metadata server and thus remove dependence on
context helper.

Changes:
   * new file:   condor/lib/facter/central_manager.rb
   * modified:   condor/manifests/client.pp
   * modified:   condor/templates/condor_config.local.csnode.erb
   * modified:   gce_node/manifests/grid_setup.pp
   * modified:   gce_node/manifests/init.pp

--- a/condor/templates/condor_config.local.csnode.erb
+++ b/condor/templates/condor_config.local.csnode.erb
@@ -4,7 +4,11 @@
 VMType = "<%= @vmtype %>"
 
 ##  What machine is your central manager? - will be contextualized by Cloud Scheduler
-CONDOR_HOST=your.central.manager
+<% if @central_manager -%>
+CONDOR_HOST=<%= @central_manager %>
+<% else -%>
+CONDOR_HOST=ars
+<% end -%>
 
 SEC_DAEMON_AUTHENTICATION =
 SEC_DAEMON_AUTHENTICATION_METHODS =
