Set VO_ATLAS_SW_DIR in grid setup script
The VO_ATLAS_SW_DIR needs to point to the proper atlas software
directory or else the auto setup will not properly find and setup athena
to run jobs.

Changes:
   * modified:   gce_node/templates/grid-setup.sh.erb

--- a/gce_node/templates/grid-setup.sh.erb
+++ b/gce_node/templates/grid-setup.sh.erb
@@ -5,6 +5,9 @@ fi
 
 export GLOBUS_FTP_CLIENT_GRIDFTP2=true
 
+## fix for atlas software location disappearing from condor job environment
+export VO_ATLAS_SW_DIR=/cvmfs/atlas.cern.ch/repo/sw
+
 ## Set up grid environment:
 export ATLAS_LOCAL_ROOT_BASE=/cvmfs/atlas.cern.ch/repo/ATLASLocalRootBase
 source $ATLAS_LOCAL_ROOT_BASE/user/atlasLocalSetup.sh --quiet
@@ -28,5 +31,3 @@ rm ~/.asetup
 # and will soon become automatic (I wonder when and how I will know?)
 . /cvmfs/atlas.cern.ch/repo/sw/local/bin/auto-setup
 
-## fix for atlas software location disappearing from condor job environment
-export VO_ATLAS_SW_DIR
