Add IP_ADDRESS to condor's ALLOW_WRITE in case of hostname problems
Fix hostname problems on OpenStack by alloing the machine IP to write to
condor as well as the FQDN.

Changes:
	modified:   condor/templates/condor_config.local.csnode.erb

--- a/condor/templates/condor_config.local.csnode.erb
+++ b/condor/templates/condor_config.local.csnode.erb
@@ -32,9 +32,8 @@ JAVA = <%= @java_exec %>
 
 
 ###### You should not need to make changes below here ########
-
-HOSTALLOW_WRITE = $(FULL_HOSTNAME), $(CONDOR_HOST)
-ALLOW_WRITE = $(FULL_HOSTNAME), $(CONDOR_HOST)
+HOSTALLOW_WRITE = $(IP_ADDRESS), $(FULL_HOSTNAME), $(CONDOR_HOST)
+ALLOW_WRITE = $(IP_ADDRESS), $(FULL_HOSTNAME), $(CONDOR_HOST)
 
 ##  Enable CCB for nodes behind NAT
 CCB_ADDRESS = $(CONDOR_HOST)
