Add missing character to shoal configuration template
Fix shoal configuration by adding the missing % in the shoal_config
template.

Changes:
	modified:   shoal/templates/shoal_client.conf.erb

--- a/shoal/templates/shoal_client.conf.erb
+++ b/shoal/templates/shoal_client.conf.erb
@@ -10,7 +10,7 @@ cvmfs_config = <%= @cvmfs_config %>
 
 # URL of shoal server rest api to find nearest squid.
 #
-shoal_server_url = <%= @server >
+shoal_server_url = <%= @server %>
 
 # Default squid proxy servers
 #
